Actually unhook the binding proto when we're tearing down the binding anonymous content.  Hasn't worked in years, apparently.  Bug 398135, r+sr=sicking