content/xbl/src/nsXBLProtoImpl.h
@@ -99,6 +99,10 @@ public:
   // return means a JS exception was set.
   PRBool ResolveAllFields(JSContext *cx, JSObject *obj) const;
 
+  // Undefine all our fields from object |obj| (which should be a
+  // JSObject for a bound element).
+  void UndefineFields(JSContext* cx, JSObject* obj) const;
+
   PRBool CompiledMembers() const {
     return mClassObject != nsnull;
   }
